myanalyzer.output
Terminals unused in grammar

    KW_OF
    ASSIGNMENT_OPERATOR_PLUS_ASSIGN
    ASSIGNMENT_OPERATOR_MINUS_ASSIGN
    ASSIGNMENT_OPERATOR_MULTIPLICATION_ASSIGN
    ASSIGNMENT_OPERATOR_DIVISION_ASSIGN
    ASSIGNMENT_OPERATOR_MODULO_ASSIGN
    ASSIGNMENT_OPERATOR_COLON_ASSIGN
    D_DOT


Grammar

    0 $accept: input $end

    1 input: program_template

    2 program_template: main_func
    3                 | comp_decl main_func
    4                 | const_decl main_func
    5                 | var_decl main_func
    6                 | func_decl main_func
    7                 | comp_decl const_decl var_decl func_decl main_func
    8                 | comp_decl const_decl var_decl main_func
    9                 | comp_decl const_decl func_decl main_func
   10                 | comp_decl var_decl func_decl main_func
   11                 | const_decl var_decl func_decl main_func
   12                 | comp_decl const_decl main_func
   13                 | comp_decl var_decl main_func
   14                 | comp_decl func_decl main_func
   15                 | const_decl var_decl main_func
   16                 | const_decl func_decl main_func
   17                 | var_decl func_decl main_func

   18 main_func: KW_DEF KW_MAIN D_LEFT_PARENTHESIS D_RIGHT_PARENTHESIS D_COLON code KW_ENDDEF D_SEMICOLON

   19 comp_decl: single_comp
   20          | comp_decl single_comp

   21 single_comp: KW_COMP TK_IDENTIFIER D_COLON comp_var_decl KW_ENDCOMP D_SEMICOLON
   22            | KW_COMP TK_IDENTIFIER D_COLON func_decl KW_ENDCOMP D_SEMICOLON
   23            | KW_COMP TK_IDENTIFIER D_COLON comp_var_decl func_decl KW_ENDCOMP D_SEMICOLON

   24 comp_var_decl: single_var
   25              | comp_var_decl single_var

   26 var_decl: single_var
   27         | var_decl single_var

   28 single_var: declarations D_COLON KW_INTEGER D_SEMICOLON
   29           | declarations D_COLON KW_SCALAR D_SEMICOLON
   30           | declarations D_COLON KW_STR D_SEMICOLON
   31           | declarations D_COLON KW_BOOLEAN D_SEMICOLON
   32           | declarations D_COLON TK_IDENTIFIER D_SEMICOLON
   33           | declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   34           | declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   35           | declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   36           | declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   37           | declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON TK_IDENTIFIER D_SEMICOLON

   38 const_decl: single_const
   39           | const_decl single_const

   40 single_const: KW_CONST declarations D_COLON KW_INTEGER D_SEMICOLON
   41             | KW_CONST declarations D_COLON KW_SCALAR D_SEMICOLON
   42             | KW_CONST declarations D_COLON KW_STR D_SEMICOLON
   43             | KW_CONST declarations D_COLON KW_BOOLEAN D_SEMICOLON
   44             | KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   45             | KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   46             | KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   47             | KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON

   48 declarations: assign_vars
   49             | ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars
   50             | assign_vars D_COMMA declarations
   51             | ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars D_COMMA declarations

   52 assign_vars: TK_IDENTIFIER
   53            | TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression

   55 expression: logic_expression

   56 logic_expression: arithmetic_expression
   57                 | logic_expression RELATIONAL_OPERATOR_EQUALS arithmetic_expression
   58                 | logic_expression RELATIONAL_OPERATOR_NOTEQUALS arithmetic_expression
   59                 | logic_expression RELATIONAL_OPERATOR_MORE arithmetic_expression
   60                 | logic_expression RELATIONAL_OPERATOR_LESS arithmetic_expression
   61                 | logic_expression RELATIONAL_OPERATOR_MORE_EQUALS arithmetic_expression
   62                 | logic_expression RELATIONAL_OPERATOR_LESS_EQUALS arithmetic_expression
   63                 | logic_expression KW_AND arithmetic_expression
   64                 | logic_expression KW_OR arithmetic_expression
   65                 | KW_NOT arithmetic_expression

   66 arithmetic_expression: complex_expression
   67                      | arithmetic_expression ARITHMETIC_OPERATOR_PLUS complex_expression
   68                      | arithmetic_expression ARITHMETIC_OPERATOR_MINUS complex_expression
   69                      | arithmetic_expression ARITHMETIC_OPERATOR_MULT complex_expression
   70                      | arithmetic_expression ARITHMETIC_OPERATOR_DIVISION complex_expression
   71                      | arithmetic_expression ARITHMETIC_OPERATOR_MODULO complex_expression
   72                      | arithmetic_expression ARITHMETIC_OPERATOR_EXP complex_expression

   73 complex_expression: TK_IDENTIFIER
   74                   | TK_CONST_INT
   75                   | TK_CONST_FLOAT
   76                   | TK_CONST_STRING
   77                   | KW_TRUE
   78                   | KW_FALSE
   79                   | D_LEFT_PARENTHESIS expression D_RIGHT_PARENTHESIS
   80                   | ARITHMETIC_OPERATOR_MINUS arithmetic_expression
   81                   | ARITHMETIC_OPERATOR_PLUS arithmetic_expression
   82                   | TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   83                   | TK_IDENTIFIER D_LEFT_PARENTHESIS function_input D_RIGHT_PARENTHESIS

   84 statement: assignment_statement
   85          | if_statement
   86          | while_statement
   87          | for_statement
   88          | func_call
   89          | KW_BREAK D_SEMICOLON
   90          | KW_CONTINUE D_SEMICOLON
   91          | KW_RETURN D_SEMICOLON
   92          | KW_RETURN expression D_SEMICOLON

   93 assignment_statement: TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression D_SEMICOLON
   94                     | TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK ASSIGNMENT_OPERATOR_ASSIGN expression D_SEMICOLON

   95 if_statement: KW_IF D_LEFT_PARENTHESIS expression D_RIGHT_PARENTHESIS D_COLON code KW_ENDIF D_SEMICOLON
   96             | KW_IF D_LEFT_PARENTHESIS expression D_RIGHT_PARENTHESIS D_COLON code else_clause KW_ENDIF D_SEMICOLON

   97 for_statement: KW_FOR TK_IDENTIFIER KW_IN D_LEFT_BLOCK arithmetic_expression D_COLON arithmetic_expression D_RIGHT_BLOCK D_COLON code KW_ENDFOR D_SEMICOLON
   98              | KW_FOR TK_IDENTIFIER KW_IN D_LEFT_BLOCK arithmetic_expression D_COLON arithmetic_expression D_COLON arithmetic_expression D_RIGHT_BLOCK D_COLON code KW_ENDFOR D_SEMICOLON

   99 while_statement: KW_WHILE D_LEFT_PARENTHESIS expression D_RIGHT_PARENTHESIS D_COLON code KW_ENDWHILE D_SEMICOLON

  100 else_clause: KW_ELSE D_COLON code

  101 code: statement code
  102     | single_var code
  103     | single_const code
  104     | ε

  105 func_call: TK_IDENTIFIER D_LEFT_PARENTHESIS function_input D_RIGHT_PARENTHESIS D_SEMICOLON

  106 function_input: ε
  107               | function_input D_COMMA expression
  108               | expression

  109 func_decl: single_function
  110          | func_decl single_function

  111 single_function: KW_DEF TK_IDENTIFIER D_LEFT_PARENTHESIS func_arguments D_RIGHT_PARENTHESIS return D_COLON func_code KW_ENDDEF D_SEMICOLON

  112 func_arguments: single_argument
  113               | single_argument D_COMMA func_arguments

  114 single_argument: ε
  115                | TK_IDENTIFIER D_COLON KW_INTEGER
  116                | TK_IDENTIFIER D_COLON KW_SCALAR
  117                | TK_IDENTIFIER D_COLON KW_STR
  118                | TK_IDENTIFIER D_COLON KW_BOOLEAN
  119                | TK_IDENTIFIER D_LEFT_BLOCK D_RIGHT_BLOCK D_COLON KW_INTEGER
  120                | TK_IDENTIFIER D_LEFT_BLOCK D_RIGHT_BLOCK D_COLON KW_SCALAR
  121                | TK_IDENTIFIER D_LEFT_BLOCK D_RIGHT_BLOCK D_COLON KW_STR
  122                | TK_IDENTIFIER D_LEFT_BLOCK D_RIGHT_BLOCK D_COLON KW_BOOLEAN
  123                | TK_IDENTIFIER D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER
  124                | TK_IDENTIFIER D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR
  125                | TK_IDENTIFIER D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR
  126                | TK_IDENTIFIER D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN

  127 return: ε
  128       | ASSIGNMENT_OPERATOR_ARROW_ASSIGN KW_INTEGER
  129       | ASSIGNMENT_OPERATOR_ARROW_ASSIGN KW_STR
  130       | ASSIGNMENT_OPERATOR_ARROW_ASSIGN KW_SCALAR
  131       | ASSIGNMENT_OPERATOR_ARROW_ASSIGN KW_BOOLEAN

  132 func_code: var_decl const_decl statements
  133          | var_decl statements
  134          | const_decl statements
  135          | statements

  136 statements: statement
  137           | statement statements


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ident (258)
    TK_IDENTIFIER <str> (259) 21 22 23 32 37 52 53 54 73 82 83 93 94 97 98 105 111 115 116 117 118 119 120 121 122 123 124 125 126
    TK_CONST_INT <str> (260) 33 34 35 36 37 44 45 46 47 74 123 124 125 126
    TK_CONST_FLOAT <str> (261) 75
    TK_CONST_STRING <str> (262) 76
    ASSIGNMENT_OPERATOR_ARROW_ASSIGN (263) 128 129 130 131
    KW_INTEGER (264) 28 33 40 44 115 119 123 128
    KW_SCALAR (265) 29 34 41 45 116 120 124 130
    KW_STR (266) 30 35 42 46 117 121 125 129
    KW_BOOLEAN (267) 31 36 43 47 118 122 126 131
    KW_TRUE (268) 77
    KW_FALSE (269) 78
    KW_CONST (270) 40 41 42 43 44 45 46 47
    KW_IF (271) 95 96
    KW_ELSE (272) 100
    KW_ENDIF (273) 95 96
    KW_FOR (274) 97 98
    KW_IN (275) 97 98
    KW_ENDFOR (276) 97 98
    KW_WHILE (277) 99
    KW_ENDWHILE (278) 99
    KW_BREAK (279) 89
    KW_CONTINUE (280) 90
    KW_NOT (281) 65
    KW_DEF (282) 18 111
    KW_ENDDEF (283) 18 111
    KW_MAIN (284) 18
    KW_RETURN (285) 91 92
    KW_COMP (286) 21 22 23
    KW_ENDCOMP (287) 21 22 23
    KW_OF (288)
    D_SEMICOLON (289) 18 21 22 23 28 29 30 31 32 33 34 35 36 37 40 41 42 43 44 45 46 47 89 90 91 92 93 94 95 96 97 98 99 105 111
    D_COMMA (290) 50 51 107 113
    D_COLON (291) 18 21 22 23 28 29 30 31 32 33 34 35 36 37 40 41 42 43 44 45 46 47 95 96 97 98 99 100 111 115 116 117 118 119 120 121 122 123 124 125 126
    RELATIONAL_OPERATOR_MORE_EQUALS (292) 61
    RELATIONAL_OPERATOR_LESS_EQUALS (293) 62
    RELATIONAL_OPERATOR_EQUALS (294) 57
    RELATIONAL_OPERATOR_NOTEQUALS (295) 58
    ASSIGNMENT_OPERATOR_PLUS_ASSIGN (296)
    ASSIGNMENT_OPERATOR_MINUS_ASSIGN (297)
    ASSIGNMENT_OPERATOR_MULTIPLICATION_ASSIGN (298)
    ASSIGNMENT_OPERATOR_DIVISION_ASSIGN (299)
    ASSIGNMENT_OPERATOR_MODULO_ASSIGN (300)
    ASSIGNMENT_OPERATOR_COLON_ASSIGN (301)
    ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN (302) 49 51
    ASSIGNMENT_OPERATOR_ASSIGN (303) 54 93 94
    ARITHMETIC_OPERATOR_EXP (304) 72
    not_sure (305)
    ARITHMETIC_OPERATOR_PLUS (306) 67 81
    ARITHMETIC_OPERATOR_MINUS (307) 68 80
    ARITHMETIC_OPERATOR_MULT (308) 69
    ARITHMETIC_OPERATOR_DIVISION (309) 70
    ARITHMETIC_OPERATOR_MODULO (310) 71
    RELATIONAL_OPERATOR_LESS (311) 60
    RELATIONAL_OPERATOR_MORE (312) 59
    D_LEFT_PARENTHESIS (313) 18 79 83 95 96 99 105 111
    D_RIGHT_PARENTHESIS (314) 18 79 83 95 96 99 105 111
    D_LEFT_BLOCK (315) 33 34 35 36 37 44 45 46 47 53 82 94 97 98 119 120 121 122 123 124 125 126
    D_RIGHT_BLOCK (316) 33 34 35 36 37 44 45 46 47 53 82 94 97 98 119 120 121 122 123 124 125 126
    D_DOT (317)
    KW_AND (318) 63
    KW_OR (319) 64
    Else (320)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    input <str> (67)
        on left: 1
        on right: 0
    program_template <str> (68)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 1
    main_func <str> (69)
        on left: 18
        on right: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
    comp_decl <str> (70)
        on left: 19 20
        on right: 3 7 8 9 10 12 13 14 20
    single_comp <str> (71)
        on left: 21 22 23
        on right: 19 20
    comp_var_decl <str> (72)
        on left: 24 25
        on right: 21 23 25
    var_decl <str> (73)
        on left: 26 27
        on right: 5 7 8 10 11 13 15 17 27 132 133
    single_var <str> (74)
        on left: 28 29 30 31 32 33 34 35 36 37
        on right: 24 25 26 27 102
    const_decl <str> (75)
        on left: 38 39
        on right: 4 7 8 9 11 12 15 16 39 132 134
    single_const <str> (76)
        on left: 40 41 42 43 44 45 46 47
        on right: 38 39 103
    declarations <str> (77)
        on left: 48 49 50 51
        on right: 28 29 30 31 32 33 34 35 36 37 40 41 42 43 44 45 46 47 50 51
    assign_vars <str> (78)
        on left: 52 53 54
        on right: 48 49 50 51
    expression <str> (79)
        on left: 55
        on right: 53 54 79 82 92 93 94 95 96 99 107 108
    logic_expression <str> (80)
        on left: 56 57 58 59 60 61 62 63 64 65
        on right: 55 57 58 59 60 61 62 63 64
    arithmetic_expression <str> (81)
        on left: 66 67 68 69 70 71 72
        on right: 56 57 58 59 60 61 62 63 64 65 67 68 69 70 71 72 80 81 97 98
    complex_expression <str> (82)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 66 67 68 69 70 71 72
    statement <str> (83)
        on left: 84 85 86 87 88 89 90 91 92
        on right: 101 136 137
    assignment_statement <str> (84)
        on left: 93 94
        on right: 84
    if_statement <str> (85)
        on left: 95 96
        on right: 85
    for_statement <str> (86)
        on left: 97 98
        on right: 87
    while_statement <str> (87)
        on left: 99
        on right: 86
    else_clause <str> (88)
        on left: 100
        on right: 96
    code <str> (89)
        on left: 101 102 103 104
        on right: 18 95 96 97 98 99 100 101 102 103
    func_call <str> (90)
        on left: 105
        on right: 88
    function_input <str> (91)
        on left: 106 107 108
        on right: 83 105 107
    func_decl <str> (92)
        on left: 109 110
        on right: 6 7 9 10 11 14 16 17 22 23 110
    single_function <str> (93)
        on left: 111
        on right: 109 110
    func_arguments <str> (94)
        on left: 112 113
        on right: 111 113
    single_argument <str> (95)
        on left: 114 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 112 113
    return <str> (96)
        on left: 127 128 129 130 131
        on right: 111
    func_code <str> (97)
        on left: 132 133 134 135
        on right: 111
    statements <str> (98)
        on left: 136 137
        on right: 132 133 134 135 137


State 0

    0 $accept: • input $end
    1 input: • program_template
    2 program_template: • main_func
    3                 | • comp_decl main_func
    4                 | • const_decl main_func
    5                 | • var_decl main_func
    6                 | • func_decl main_func
    7                 | • comp_decl const_decl var_decl func_decl main_func
    8                 | • comp_decl const_decl var_decl main_func
    9                 | • comp_decl const_decl func_decl main_func
   10                 | • comp_decl var_decl func_decl main_func
   11                 | • const_decl var_decl func_decl main_func
   12                 | • comp_decl const_decl main_func
   13                 | • comp_decl var_decl main_func
   14                 | • comp_decl func_decl main_func
   15                 | • const_decl var_decl main_func
   16                 | • const_decl func_decl main_func
   17                 | • var_decl func_decl main_func
   18 main_func: • KW_DEF KW_MAIN D_LEFT_PARENTHESIS D_RIGHT_PARENTHESIS D_COLON code KW_ENDDEF D_SEMICOLON
   19 comp_decl: • single_comp
   20          | • comp_decl single_comp
   21 single_comp: • KW_COMP TK_IDENTIFIER D_COLON comp_var_decl KW_ENDCOMP D_SEMICOLON
   22            | • KW_COMP TK_IDENTIFIER D_COLON func_decl KW_ENDCOMP D_SEMICOLON
   23            | • KW_COMP TK_IDENTIFIER D_COLON comp_var_decl func_decl KW_ENDCOMP D_SEMICOLON
   26 var_decl: • single_var
   27         | • var_decl single_var
   28 single_var: • declarations D_COLON KW_INTEGER D_SEMICOLON
   29           | • declarations D_COLON KW_SCALAR D_SEMICOLON
   30           | • declarations D_COLON KW_STR D_SEMICOLON
   31           | • declarations D_COLON KW_BOOLEAN D_SEMICOLON
   32           | • declarations D_COLON TK_IDENTIFIER D_SEMICOLON
   33           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   34           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   35           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   36           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   37           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON TK_IDENTIFIER D_SEMICOLON
   38 const_decl: • single_const
   39           | • const_decl single_const
   40 single_const: • KW_CONST declarations D_COLON KW_INTEGER D_SEMICOLON
   41             | • KW_CONST declarations D_COLON KW_SCALAR D_SEMICOLON
   42             | • KW_CONST declarations D_COLON KW_STR D_SEMICOLON
   43             | • KW_CONST declarations D_COLON KW_BOOLEAN D_SEMICOLON
   44             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   45             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   46             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   47             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   48 declarations: • assign_vars
   49             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars
   50             | • assign_vars D_COMMA declarations
   51             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars D_COMMA declarations
   52 assign_vars: • TK_IDENTIFIER
   53            | • TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | • TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression
  109 func_decl: • single_function
  110          | • func_decl single_function
  111 single_function: • KW_DEF TK_IDENTIFIER D_LEFT_PARENTHESIS func_arguments D_RIGHT_PARENTHESIS return D_COLON func_code KW_ENDDEF D_SEMICOLON

    TK_IDENTIFIER                       shift, and go to state 1
    KW_CONST                            shift, and go to state 2
    KW_DEF                              shift, and go to state 3
    KW_COMP                             shift, and go to state 4
    ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN  shift, and go to state 5

    input             go to state 6
    program_template  go to state 7
    main_func         go to state 8
    comp_decl         go to state 9
    single_comp       go to state 10
    var_decl          go to state 11
    single_var        go to state 12
    const_decl        go to state 13
    single_const      go to state 14
    declarations      go to state 15
    assign_vars       go to state 16
    func_decl         go to state 17
    single_function   go to state 18


State 1

   52 assign_vars: TK_IDENTIFIER •  [D_COMMA, D_COLON]
   53            | TK_IDENTIFIER • D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | TK_IDENTIFIER • ASSIGNMENT_OPERATOR_ASSIGN expression

    ASSIGNMENT_OPERATOR_ASSIGN  shift, and go to state 19
    D_LEFT_BLOCK                shift, and go to state 20

    $default  reduce using rule 52 (assign_vars)

    Conflict between rule 52 and token D_LEFT_BLOCK resolved as shift (not_sure < D_LEFT_BLOCK).


State 2

   40 single_const: KW_CONST • declarations D_COLON KW_INTEGER D_SEMICOLON
   41             | KW_CONST • declarations D_COLON KW_SCALAR D_SEMICOLON
   42             | KW_CONST • declarations D_COLON KW_STR D_SEMICOLON
   43             | KW_CONST • declarations D_COLON KW_BOOLEAN D_SEMICOLON
   44             | KW_CONST • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   45             | KW_CONST • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   46             | KW_CONST • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   47             | KW_CONST • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   48 declarations: • assign_vars
   49             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars
   50             | • assign_vars D_COMMA declarations
   51             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars D_COMMA declarations
   52 assign_vars: • TK_IDENTIFIER
   53            | • TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | • TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression

    TK_IDENTIFIER                       shift, and go to state 1
    ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN  shift, and go to state 5

    declarations  go to state 21
    assign_vars   go to state 16


State 3

   18 main_func: KW_DEF • KW_MAIN D_LEFT_PARENTHESIS D_RIGHT_PARENTHESIS D_COLON code KW_ENDDEF D_SEMICOLON
  111 single_function: KW_DEF • TK_IDENTIFIER D_LEFT_PARENTHESIS func_arguments D_RIGHT_PARENTHESIS return D_COLON func_code KW_ENDDEF D_SEMICOLON

    TK_IDENTIFIER  shift, and go to state 22
    KW_MAIN        shift, and go to state 23


State 4

   21 single_comp: KW_COMP • TK_IDENTIFIER D_COLON comp_var_decl KW_ENDCOMP D_SEMICOLON
   22            | KW_COMP • TK_IDENTIFIER D_COLON func_decl KW_ENDCOMP D_SEMICOLON
   23            | KW_COMP • TK_IDENTIFIER D_COLON comp_var_decl func_decl KW_ENDCOMP D_SEMICOLON

    TK_IDENTIFIER  shift, and go to state 24


State 5

   49 declarations: ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN • assign_vars
   51             | ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN • assign_vars D_COMMA declarations
   52 assign_vars: • TK_IDENTIFIER
   53            | • TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | • TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression

    TK_IDENTIFIER  shift, and go to state 1

    assign_vars  go to state 25


State 6

    0 $accept: input • $end

    $end  shift, and go to state 26


State 7

    1 input: program_template •

    $default  reduce using rule 1 (input)


State 8

    2 program_template: main_func •

    $default  reduce using rule 2 (program_template)


State 9

    3 program_template: comp_decl • main_func
    7                 | comp_decl • const_decl var_decl func_decl main_func
    8                 | comp_decl • const_decl var_decl main_func
    9                 | comp_decl • const_decl func_decl main_func
   10                 | comp_decl • var_decl func_decl main_func
   12                 | comp_decl • const_decl main_func
   13                 | comp_decl • var_decl main_func
   14                 | comp_decl • func_decl main_func
   18 main_func: • KW_DEF KW_MAIN D_LEFT_PARENTHESIS D_RIGHT_PARENTHESIS D_COLON code KW_ENDDEF D_SEMICOLON
   20 comp_decl: comp_decl • single_comp
   21 single_comp: • KW_COMP TK_IDENTIFIER D_COLON comp_var_decl KW_ENDCOMP D_SEMICOLON
   22            | • KW_COMP TK_IDENTIFIER D_COLON func_decl KW_ENDCOMP D_SEMICOLON
   23            | • KW_COMP TK_IDENTIFIER D_COLON comp_var_decl func_decl KW_ENDCOMP D_SEMICOLON
   26 var_decl: • single_var
   27         | • var_decl single_var
   28 single_var: • declarations D_COLON KW_INTEGER D_SEMICOLON
   29           | • declarations D_COLON KW_SCALAR D_SEMICOLON
   30           | • declarations D_COLON KW_STR D_SEMICOLON
   31           | • declarations D_COLON KW_BOOLEAN D_SEMICOLON
   32           | • declarations D_COLON TK_IDENTIFIER D_SEMICOLON
   33           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   34           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   35           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   36           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   37           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON TK_IDENTIFIER D_SEMICOLON
   38 const_decl: • single_const
   39           | • const_decl single_const
   40 single_const: • KW_CONST declarations D_COLON KW_INTEGER D_SEMICOLON
   41             | • KW_CONST declarations D_COLON KW_SCALAR D_SEMICOLON
   42             | • KW_CONST declarations D_COLON KW_STR D_SEMICOLON
   43             | • KW_CONST declarations D_COLON KW_BOOLEAN D_SEMICOLON
   44             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   45             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   46             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   47             | • KW_CONST declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   48 declarations: • assign_vars
   49             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars
   50             | • assign_vars D_COMMA declarations
   51             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars D_COMMA declarations
   52 assign_vars: • TK_IDENTIFIER
   53            | • TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | • TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression
  109 func_decl: • single_function
  110          | • func_decl single_function
  111 single_function: • KW_DEF TK_IDENTIFIER D_LEFT_PARENTHESIS func_arguments D_RIGHT_PARENTHESIS return D_COLON func_code KW_ENDDEF D_SEMICOLON

    TK_IDENTIFIER                       shift, and go to state 1
    KW_CONST                            shift, and go to state 2
    KW_DEF                              shift, and go to state 3
    KW_COMP                             shift, and go to state 4
    ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN  shift, and go to state 5

    main_func        go to state 27
    single_comp      go to state 28
    var_decl         go to state 29
    single_var       go to state 12
    const_decl       go to state 30
    single_const     go to state 14
    declarations     go to state 15
    assign_vars      go to state 16
    func_decl        go to state 31
    single_function  go to state 18


State 10

   19 comp_decl: single_comp •

    $default  reduce using rule 19 (comp_decl)


State 11

    5 program_template: var_decl • main_func
   17                 | var_decl • func_decl main_func
   18 main_func: • KW_DEF KW_MAIN D_LEFT_PARENTHESIS D_RIGHT_PARENTHESIS D_COLON code KW_ENDDEF D_SEMICOLON
   27 var_decl: var_decl • single_var
   28 single_var: • declarations D_COLON KW_INTEGER D_SEMICOLON
   29           | • declarations D_COLON KW_SCALAR D_SEMICOLON
   30           | • declarations D_COLON KW_STR D_SEMICOLON
   31           | • declarations D_COLON KW_BOOLEAN D_SEMICOLON
   32           | • declarations D_COLON TK_IDENTIFIER D_SEMICOLON
   33           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_INTEGER D_SEMICOLON
   34           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_SCALAR D_SEMICOLON
   35           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_STR D_SEMICOLON
   36           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON KW_BOOLEAN D_SEMICOLON
   37           | • declarations D_LEFT_BLOCK TK_CONST_INT D_RIGHT_BLOCK D_COLON TK_IDENTIFIER D_SEMICOLON
   48 declarations: • assign_vars
   49             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars
   50             | • assign_vars D_COMMA declarations
   51             | • ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN assign_vars D_COMMA declarations
   52 assign_vars: • TK_IDENTIFIER
   53            | • TK_IDENTIFIER D_LEFT_BLOCK expression D_RIGHT_BLOCK
   54            | • TK_IDENTIFIER ASSIGNMENT_OPERATOR_ASSIGN expression
  109 func_decl: • single_function
  110          | • func_decl single_function
  111 single_function: • KW_DEF TK_IDENTIFIER D_LEFT_PARENTHESIS func_arguments D_RIGHT_PARENTHESIS return D_COLON func_code KW_ENDDEF D_SEMICOLON

    TK_IDENTIFIER                       shift, and go to state 1
    KW_DEF                              shift, and go to state 3
    ASSIGNMENT_OPERATOR_HASHTAG_ASSIGN  shift, and go to state 5

    main_func        go to state 32
    single_var       go to state 33
    declarations     go to state 15
    assign_vars      go to state 16
    func_decl        go to state 34
    single_function  go to state 18


State 12

   26 var_decl: single_var •
